Migrated to SpringBoot 3.4