@@ -11,7 +11,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
@@ -27,8 +27,11 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+import static org.springframework.security.config.Customizer.withDefaults;
+import static org.springframework.security.web.util.matcher.AntPathRequestMatcher.antMatcher;
+
 @Configuration
-@EnableGlobalMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity
 @EnableWebSecurity
 public class SecurityConfig {
     private final UserAppService userAppService;
@@ -64,37 +67,76 @@ public class SecurityConfig {
     protected SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .authenticationProvider(authenticationProvider())
-                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()
-                .exceptionHandling().authenticationEntryPoint(restAuthenticationEntryPoint).and()
-                .authorizeRequests()
-                .antMatchers("/auth/**",
-                        "/socket/**",
-                        "/swagger-ui","/swagger-ui.html","/swagger-ui/**" , "/swagger-resources","/swagger-resources/**", "/v2/api-docs" +
-                        "/recipe/getAll",
-                        "/recipe/filter/category",
-                        "/ingredient/getAll").permitAll()
-                        .anyRequest().authenticated().and()
-                .cors().and()
-                .addFilterBefore(new TokenAuthenticationFilter(tokenHandler, userAppService), BasicAuthenticationFilter.class);
-        http.csrf().disable();
+                .sessionManagement(management ->
+                        management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .exceptionHandling(handling ->
+                        handling.authenticationEntryPoint(restAuthenticationEntryPoint))
+                .authorizeHttpRequests(requests -> requests
+                        // Public endpoints
+                        .requestMatchers(
+                                "/auth/**",
+                                "/socket/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/swagger-resources/**",
+                                "/v3/api-docs/**",
+                                "/recipe/getAll",
+                                "/recipe/filter/category",
+                                "/ingredient/getAll",
+                                // Static resources - safe patterns only
+                                "/*.html",
+                                "/favicon.ico",
+                                "/static/**",
+                                "/public/**",
+                                "/assets/**",
+                                "/css/**",
+                                "/js/**",
+                                "/images/**",
+                                "/img/**"
+                        ).permitAll()
+                        // All other requests need authentication
+                        .anyRequest().authenticated())
+                .cors(withDefaults())
+                .csrf(csrf -> csrf.disable())
+                .addFilterBefore(
+                        new TokenAuthenticationFilter(tokenHandler, userAppService),
+                        BasicAuthenticationFilter.class);
+
         return http.build();
+
     }
 
 
     @Bean
     public WebSecurityCustomizer webSecurityCustomizer() {
-        return (web) -> web.ignoring().antMatchers(HttpMethod.POST, "/auth/login").and().ignoring().antMatchers(HttpMethod.GET, "/", "/webjars/**", "/*.html", "favicon.ico",
-                "/swagger-ui","/socket/**","/swagger-ui.html","/swagger-ui/**" , "/swagger-resources","/configuration/ui","/configuration/security","/configuration/**","/swagger-resources/**", "/v2/api-docs", "/**/*.html", "/**/*.css", "/**/*.js","/png/**","/jpg/**","/**/*.jpg","/**/*.png");
+        return (web) -> web.ignoring()
+                // Only ignore truly static resources from specific locations
+                .requestMatchers(
+                        "/webjars/**",
+                        "/favicon.ico"
+                );
     }
 
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+
+        // Option 1: For development (allows credentials)
+        configuration.setAllowedOriginPatterns(List.of("http://localhost:*"));
+        configuration.setAllowCredentials(true);
+
+        // Option 2: For production without credentials (uncomment if needed)
+        // configuration.setAllowedOrigins(List.of("*"));
+        // configuration.setAllowCredentials(false);
+
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "authorization", "content-type", "x-auth-token", "access_token"));
         configuration.setExposedHeaders(List.of("x-auth-token"));
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
